--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fixedToScroll.css">
     <script
             src="http://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -79,7 +79,7 @@
 <div class="fixed-element fixed-element-bottom">FIXED ELEMENT</div>
 <footer></footer>
 
-<script type="text/javascript" src="fixedElement.js"></script>
+<script type="text/javascript" src="fixedToScroll.js"></script>
 <script type="text/javascript">
     $('.fixed-element-top').fixedElement({
         position:'top',
